--- a/index.html
+++ b/index.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
-<html lang="esp">
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name ="viewport" content="width=device-width, initial-scale=1.0">
-<title>Inicio</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Galería </title>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
-	<div class="main">
-		<div class="navigation">
-			<span style="--i:0;--x:-1;--y:0;"><a href="#"><ion-icon name="camera-outline"></ion-icon></a></span>
-			<span style="--i:1;--x:1;--y:0;"><a href="#"><ion-icon name="diamond-outline"></ion-icon></a></span>
-			<span style="--i:2;--x:0;--y:-1;"><a href="#"><ion-icon name="chatbubble-outline"></ion-icon></a></span>
-			<span style="--i:3;--x:0;--y:1;"><a href="#"><ion-icon name="alarm-outline"></ion-icon></a></span>
-			<span style="--i:4;--x:-1;--y:1;"><a href="#"><ion-icon name="game-controller-outline"></ion-icon></a></span>
-			<span style="--i:5;--x:-1;--y:-1;"><a href="#"><ion-icon name="moon-outline"></ion-icon></a></span>
-			<span style="--i:6;--x:1;--y:-1;"><a href="#"><ion-icon name="water-outline"></ion-icon></a></span>
-			<span style="--i:7;--x:1;--y:1;"><a href="#"><ion-icon name="time-outline"></ion-icon></a></span>
-		</div>
-		<div class="close"><ion-icon name="close-outline"></ion-icon></div>
-	</div>
-
-
-	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-	<script>
-		let navigation = document.querySelector('.navigation');
-		let close = document.querySelector('.close');
-		navigation.onclick = function(){
-			navigation.classList.add('active');
-		}
-		close.onclick = function(){
-			navigation.classList.remove('active');
-		}
-	</script>
+    <header>
+        <h1>Galería </h1>
+        <nav>
+            <ul>
+                <li><a href="pagina1.html" class="menu-button">Secciones</a></li>
+                <li><a href="pagina2.html" class="menu-button">Destacados</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="grid-container">
+        <img class="grid-item" src="https://picsum.photos/230/128.jpg" width="230" height="128" />
+        <img class="grid-item" src="https://picsum.photos/230/300.jpg" width="230" height="300" />
+        <img class="grid-item" src="https://picsum.photos/230/410.jpg" width="230" height="410" />
+        <img class="grid-item" src="https://picsum.photos/230/250.jpg" width="230" height="250" />
+        <img class="grid-item" src="https://picsum.photos/230/180.jpg" width="230" height="180" />
+        <img class="grid-item" src="https://picsum.photos/230/340.jpg" width="230" height="340" />
+        <img class="grid-item" src="https://picsum.photos/230/120.jpg" width="230" height="120" />
+        <img class="grid-item" src="https://picsum.photos/230/215.jpg" width="230" height="215" />
+        <img class="grid-item" src="https://picsum.photos/230/420.jpg" width="230" height="420" />
+        <img class="grid-item" src="https://picsum.photos/230/320.jpg" width="230" height="320" />
+        <img class="grid-item" src="https://picsum.photos/230/153.jpg" width="230" height="153" />
+        <img class="grid-item" src="https://picsum.photos/230/480.jpg" width="230" height="480" />
+        <img class="grid-item" src="https://picsum.photos/230/260.jpg" width="230" height="260" />
+        <img class="grid-item" src="https://picsum.photos/230/450.jpg" width="230" height="450" />
+        <img class="grid-item" src="https://picsum.photos/230/135.jpg" width="230" height="135" />
+        <img class="grid-item" src="https://picsum.photos/230/287.jpg" width="230" height="287" />
+        <img class="grid-item" src="https://picsum.photos/230/500.jpg" width="230" height="500" />
+        <img class="grid-item" src="https://picsum.photos/230/222.jpg" width="230" height="222" />
+        <img class="grid-item" src="https://picsum.photos/230/321.jpg" width="230" height="321" />
+        <img class="grid-item" src="https://picsum.photos/230/150.jpg" width="230" height="150" />
+        <img class="grid-item" src="https://picsum.photos/230/165.jpg" width="230" height="165" />
+        <img class="grid-item" src="https://picsum.photos/230/305.jpg" width="230" height="305" />
+        <img class="grid-item" src="https://picsum.photos/230/286.jpg" width="230" height="286" />
+        <img class="grid-item" src="https://picsum.photos/230/98.jpg" width="230" height="98" />
+        <img class="grid-item" src="https://picsum.photos/230/490.jpg" width="230" height="490" />
+        <img class="grid-item" src="https://picsum.photos/230/124.jpg" width="230" height="124" />
+        <img class="grid-item" src="https://picsum.photos/230/510.jpg" width="230" height="510" />
+        <img class="grid-item" src="https://picsum.photos/230/320.jpg" width="230" height="320" />
+        <img class="grid-item" src="https://picsum.photos/230/260.jpg" width="230" height="260" />
+      </div>
+  
+      <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+      <script>
+        var elem = document.querySelector(".grid-container");
+        var msnry = new Masonry(elem, {
+          itemSelector: ".grid-item",
+          columnWidth: 220,
+          gutter: 20,
+          isFitWidth: true
+        });
+      </script>
+    <script src="./script.js"></script>
 </body>
-</html>
 </html>
