--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Galería </h1>
         <nav>
             <ul>
-                <li><a href="pagina1.html" class="menu-button">Secciones</a></li>
+                <li><a href="https://bixgis.github.io/Seccio_pint/" class="menu-button">Secciones</a></li>
                 <li><a href="pagina2.html" class="menu-button">Destacados</a></li>
             </ul>
         </nav>
