--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <link><a href="https://bixgis.github.io/Seccio_pint/" class="menu-button">Secciones</a></li>
-                <li><a href="https://bixgis.github.io/Destacado_Pinterest3/" class="menu-button">Destacados</a></li>
+                <link><a href="https://bixgis.github.io/Destacado_Pinterest3/" class="menu-button">Destacados</a></li>
             </ul>
         </nav>
     </header>
