--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería </title>
     <link rel="stylesheet" type="text/css" href="./styles.css">
+
 </head>
 <body>
     <header>
@@ -13,6 +14,7 @@
             <ul>
                 <link><a href="https://bixgis.github.io/Seccio_pint/" class="menu-button">Secciones</a></li>
                 <link><a href="https://bixgis.github.io/Destacado_Pinterest3/" class="menu-button">Destacados</a></li>
+                <link><a href="https://espadadeabsorcion.github.io/videogalley/" class="menu-button">Videos</a></li>
             </ul>
         </nav>
     </header>
