--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <link><a href="https://bixgis.github.io/Seccio_pint/" class="menu-button">Secciones</a></li>
                 <link><a href="https://bixgis.github.io/Destacado_Pinterest3/" class="menu-button">Destacados</a></li>
-                <link><a href="https://espadadeabsorcion.github.io/videogalley/" class="menu-button">Videos</a></li>
+                <link><a href="https://espadadeabsorcion.github.io/videogalley/" class="menu-button">Regresar</a></li>
             </ul>
         </nav>
     </header>
